force-app/main/default/objects/Faculty__c/fields/Deptname__c.field-meta.xml
<CustomField>
    <fullName>Deptname__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deptname</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Faculties</relationshipLabel>
    <relationshipName>Faculties</relationshipName>
    <type>Lookup</type>
</CustomField>