force-app/main/default/objects/Faculty__c/fields/Grade_level__c.field-meta.xml
<CustomField>
    <fullName>Grade_level__c</fullName>
    <label>Grade level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>