force-app/main/default/objects/Faculty__c/fields/HOD__c.field-meta.xml
<CustomField>
    <fullName>HOD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HOD</label>
    <type>Checkbox</type>
</CustomField>